# VisionPipelineSample

./: README.md
DisplayImage/: CMakeLists.txt  main.cpp
Endoscope_Snapshot/: dualcam.sh  vid.xml
Endoscope_Snapshot/asymmetric_small/: projection_matrix.m  stereo_calibrated.mat  stereo_calibration.m
Left_Calib/: CMakeLists.txt  in_VID2.xml  main.cpp
Right_Calib/: CMakeLists.txt  in_VID3.xml
ScanImage/: CMakeLists.txt  main.cpp
calibrate_test/: CMakeLists.txt  main.cpp
calibration/: CMakeLists.txt  main.cpp
camera_calibration/: CMakeLists.txt  main.cpp
ocv2pcl/: CMakeLists.txt  main.cpp
pcd_tutorial/: CMakeLists.txt  main.cpp
pcl_matrix_transform/: CMakeLists.txt  main.cpp
stereo_calib/: CMakeLists.txt  main.cpp
stereo_matching/: CMakeLists.txt  main.cpp
stereo_stream/: CMakeLists.txt  main.cpp
vision_matlab_code/: cameraMat.txt  endo_camera_output.xml  extrinsic.txt  projectionMatrix.m  rearrangeCamera.m  rearrangeExtrinsic.m
